--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
         </p>
         <img src="assets/images/footer/logo.svg" alt="">
     </footer>
+
+    <script>
+        function switchTheme(){
+            document.body.classList.toggle('dark-theme')
+            document.body.classList.toggle('light-theme')
+        }
+    </script>
 </body>
 
 </html>
